// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NEOONEDataProvider call 1`] = `
Object {
  "actions": Array [],
  "result": Object {
    "gasConsumed": "0",
    "gasCost": "0",
    "message": "10",
    "stack": Array [
      Object {
        "type": "Integer",
        "value": "1",
      },
      Object {
        "type": "Array",
        "value": Array [
          Object {
            "type": "Void",
          },
        ],
      },
    ],
    "state": "FAULT",
  },
}
`;

exports[`NEOONEDataProvider iterBlocks - undefined iterBlocksFetchTimeoutMS 1`] = `
FromAsyncIterable {
  "_selector": [Function],
  "_source": AsyncBlockIterator {
    "batchSize": 10,
    "client": NEOONEDataProvider {
      "iterBlocksBatchSize": undefined,
      "iterBlocksFetchTimeoutMS": undefined,
      "mutableClient": JSONRPCClient {
        "provider": JSONRPCHTTPProvider {
          "batcher": DataLoader {
            "_batchLoadFn": [Function],
            "_options": Object {
              "cacheKeyFn": [Function],
              "maxBatchSize": 25,
            },
            "_promiseCache": Map {},
            "_queue": Array [],
          },
          "endpoint": "bar",
        },
      },
      "network": "foo",
    },
    "fetchTimeoutMS": 20000,
    "indexStop": 2,
    "monitor": undefined,
    "mutableCurrentIndex": 1,
    "mutableDone": false,
    "mutableFetching": false,
    "mutableItems": Array [],
    "mutableResolvers": Array [],
  },
}
`;

exports[`NEOONEDataProvider iterBlocks 1`] = `
FromAsyncIterable {
  "_selector": [Function],
  "_source": AsyncBlockIterator {
    "batchSize": 10,
    "client": NEOONEDataProvider {
      "iterBlocksBatchSize": undefined,
      "iterBlocksFetchTimeoutMS": 1000,
      "mutableClient": JSONRPCClient {
        "provider": JSONRPCHTTPProvider {
          "batcher": DataLoader {
            "_batchLoadFn": [Function],
            "_options": Object {
              "cacheKeyFn": [Function],
              "maxBatchSize": 25,
            },
            "_promiseCache": Map {},
            "_queue": Array [],
          },
          "endpoint": "bar",
        },
      },
      "network": "foo",
    },
    "fetchTimeoutMS": 1000,
    "indexStop": undefined,
    "monitor": undefined,
    "mutableCurrentIndex": 0,
    "mutableDone": false,
    "mutableFetching": false,
    "mutableItems": Array [],
    "mutableResolvers": Array [],
  },
}
`;

exports[`NEOONEDataProvider setRPCURL 1`] = `
NEOONEDataProvider {
  "iterBlocksBatchSize": undefined,
  "iterBlocksFetchTimeoutMS": 1000,
  "mutableClient": JSONRPCClient {
    "provider": JSONRPCHTTPProvider {
      "batcher": DataLoader {
        "_batchLoadFn": [Function],
        "_options": Object {
          "cacheKeyFn": [Function],
          "maxBatchSize": 25,
        },
        "_promiseCache": Map {},
        "_queue": Array [],
      },
      "endpoint": "buzz",
    },
  },
  "network": "foo",
}
`;
